--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
 
     <div class="logotop"></div>
+
+
+    <div class="skaidrus"></div>
+
     
     <h1>A NEW WORLD OF TAILORED SHIRTS FOR WOMEN   </h1>
 
@@ -17,9 +21,9 @@
         <h2>ARRIVING 2016</h2>
     </div>
 
-    <div class="inform">
         <h3>Sign up for reinventing wardrobe classics, made for movement</h3>
-        <form action="forma">
+
+        <div class="formar" action="forma">
 
             <label for="vardas">
                 <input type="text" placeholder="VARDAS">
@@ -33,10 +37,11 @@
                 <input type="text" placeholder="EL. PAŠTAS">
             </label>
 
-                <input class="migtukas" type="submit" value="Prisijungti">
+        </div>
 
-        </form>
-    </div>
+            <div class="spaustukas">
+                <input class="migtukas" type="submit" value="Prisijungti">
+            </div>
     
 </body>
 </html>
